--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>jpmonettas</groupId>
   <artifactId>flow-storm-debugger</artifactId>
-  <version>0.3.7</version>
-  <name>flow-storm-debugger</name>  
+  <version>0.4.0-SNAPSHOT</version>
+  <name>flow-storm-debugger</name>
   <dependencies>
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.10.2-alpha2</version>
+      <version>1.10.2-alpha4</version>
     </dependency>
     <dependency>
       <groupId>cljfx</groupId>
@@ -52,14 +52,21 @@
       <version>1.3.610</version>
     </dependency>
     <dependency>
+      <groupId>juji</groupId>
+      <artifactId>editscript</artifactId>
+      <version>0.4.6</version>
+    </dependency>
+    <dependency>
       <groupId>http-kit</groupId>
       <artifactId>http-kit</artifactId>
       <version>2.4.0</version>
     </dependency>
   </dependencies>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-  </build>
+  
+    <build>
+      <sourceDirectory>src</sourceDirectory>
+    </build>
+  
   <repositories>
     <repository>
       <id>clojars</id>
@@ -71,37 +78,41 @@
     </repository>
   </repositories>
   <profiles>
-	<profile>
-	  <id>jdk8</id>
-	  <activation> <jdk> 1.8 </jdk> </activation>
-	  <dependencies>
-		<dependency>
-		  <groupId>org.kordamp.ikonli</groupId>
+    <profile>
+      <id>jdk8</id>
+      <activation>
+        <jdk> 1.8 </jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.kordamp.ikonli</groupId>
           <artifactId>ikonli-javafx</artifactId>
           <version>2.6.0</version>
-		</dependency>
-		<dependency>
-		  <groupId>org.kordamp.ikonli</groupId>
+        </dependency>
+        <dependency>
+          <groupId>org.kordamp.ikonli</groupId>
           <artifactId>ikonli-materialdesign-pack</artifactId>
-          <version>2.6.0</version>          
-		</dependency>
-	  </dependencies>
-	</profile>
-	<profile>
-	  <id>jdk11</id>
-	  <activation> <jdk> [11,) </jdk> </activation>
-	  <dependencies>
-		<dependency>
-		  <groupId>org.kordamp.ikonli</groupId>
+          <version>2.6.0</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>jdk11</id>
+      <activation>
+        <jdk> [11,) </jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.kordamp.ikonli</groupId>
           <artifactId>ikonli-javafx</artifactId>
-          <version>11.5.0</version>          
-		</dependency>
-		<dependency>
-		  <groupId>org.kordamp.ikonli</groupId>
+          <version>11.5.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.kordamp.ikonli</groupId>
           <artifactId>ikonli-materialdesign-pack</artifactId>
           <version>11.5.0</version>
-		</dependency>
-	  </dependencies>
-	</profile>
+        </dependency>
+      </dependencies>
+    </profile>
   </profiles>
 </project>
