--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>http-kit</artifactId>
       <version>2.4.0</version>
     </dependency>
+	<dependency>
+	  <groupId>com.cognitect</groupId>
+	  <artifactId>transit-clj</artifactId>
+	  <version>1.0.324</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
